<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.mainActivity.detailActivity.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/collapsing_toolbar_appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <!--  app:contentScrim : The Toolbar color when the
              collapsing toolbar is collapsed. -->
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary" >

            <!-- app:layout_collapseMode : parallax means an animation effect,
                 pin means fixed. -->
            <ImageView
                android:id="@+id/collapsing_toolbar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="#fff"
                app:layout_collapseMode="parallax"
                android:src="@mipmap/img_placeholder"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:paddingBottom="24dp">
        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_not_available"
            android:textSize="32dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/ingredientsLabelTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="8dp"/>/>

        <TextView
            android:id="@+id/ingredientsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients_not_available"
            android:textSize="16dp"
            android:textColor="@color/colorBlack"/>/>
            <TextView
                android:id="@+id/webReferenceLabelTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/web_source"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="8dp"/>/>

            <TextView
                android:id="@+id/webReferenceTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link_not_available"
                android:textColor="@color/colorBlack"
                android:textSize="16dp" /> />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>